--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
+    "ramus": "^0.0.1",
     "style-loader": "^0.16.1",
     "webpack-dev-server": "^1.16.2"
   }
